Sforce8 Project Data/src/objects/AccountAddress__c.object
<CustomObject>
    <description>顧客住所情報を維持するオブジェクト</description>
    <fields>
        <fullName>Address1__c</fullName>
        <label>住所１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>住所２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>住所３</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>住所区分</label>
        <picklist>
            <picklistValues>
                <fullName>1：個人住所</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2：個人勤務先住所</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3：法人住所</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactNo__c</fullName>
        <label>顧客№</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>住所</relationshipLabel>
        <relationshipName>contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeleteFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>削除区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FK1__c</fullName>
        <defaultValue>&apos;*&apos;</defaultValue>
        <description>ホテルコード + 顧客№ + 住所区分</description>
        <externalId>true</externalId>
        <label>外部キー１</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotelCode__c</fullName>
        <label>ホテルコード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostNo__c</fullName>
        <description>xxx-xxxx</description>
        <label>郵便番号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>住所</label>
    <nameField>
        <label>顧客№</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>